sass/partials/_home.scss
/* ... */
.home-intro {
    background-size: cover;
    background-position: center;
    position: relative;

    &:after {
        content: "";
        width: 100%;
        height: 100px;
        background: rgb(255,255,255);
        background: -moz-linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
        background: -webkit-linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
        background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#ffffff",GradientType=1);
        position: absolute;
        bottom: 0;
        height: 180px;
    }
    .row {
        max-width: 1200px; width: 100%;
        margin: 70px auto;
        position: relative;
        z-index: 8;
    }
    .home-intro-left {
        h2, h3 {
            color: $primary;
        }

        h2 {
            font-size: 30px;
            font-weight: normal;
            margin-bottom: 20px;
        }

        h3 {
            font-size: 18px;
            font-weight: normal;
            line-height: 1.6;
        }

        a.learn-more {
            margin-top: 30px;
            font-size: 20px;
            font-weight: 500;
        }

        p {
            line-height: 2;
        }
    }
}

.home-major-points {
    padding-top: 70px;
    color: $primary;
    .point {
        margin-bottom:60px;
        transition: all .2s ease;

        .livicon-evo {
            width: 25%;
            float: left;
            margin-right: 4%;
            //padding: 30px 30px 30px 0;
        }
    }
    .point:not(:hover) {
        opacity: .6;
        transition: all .2s ease;
    }
}

.home-industries {
    background: linear-gradient(90deg, rgba(35,31,32,0.58) 0%, rgba(35,31,32,0.81) 100%);
    background-size: cover;
    padding: 100px 0;
    .row {
        max-width: 1200px; width: 100%;
        margin: 0 auto;

        h2.title {
            width: 100%;
            text-align:center;
            color: white;
        }

        ul.industry-list {
            width: 100%;
            display: block;
            padding-left: 0;
            margin-top: 50px;
            li {
                width: 33%;
                float:left;
                text-align: center;
                list-style-type: none;
                margin: 13px 0;
                color: white;

                a {
                    color: white;

                    &:hover {
                        color: $secondary;
                        text-decoration: none;
                    }
                }
            }
        }
    }
}
.home-contractor, .subsidiary-service, .page-contractor {
    .row {
        &:first-of-type {
            padding: 80px 0;
        }

        &.contractor-cta {
            padding: 80px 0;
        }
    }

    .folding-menu {
      /* remove inline-block extra spacing */
      font-size: 0;
      padding: 0;
    }

    .folding-menu li { list-style-type: none; }

    .unfolded-content {
        font-size: 15px;
        background-color: $white;
        box-sizing: border-box;
        position: relative;
        width: 100vw;
        margin-left: calc(-50vw + 50%);
        margin-right: calc(-50vw + 50%);
    }

    .active-item {
        position: relative;
    }

    .active-item:after {
        content: '';
        width: 0;
        height: 0;
        position: absolute;
        left: calc( 50% - 40px );
        bottom: -30px;
        border-bottom: 20px solid $primary;
        border-right: 40px solid transparent;
        border-top: 00px solid transparent;
        border-left: 40px solid transparent;
        z-index: 10;
        transition: border-top-color 0.3s;
    }

    .close-unfolded-content {
        position: absolute;
        top: 20px;
        right: 20px;
        height: 20px;
        width: 20px;
        text-align: center;
        background: #fff;
        transition: color 0.3s, background 0.3s;
    }

    .close-unfolded-content:hover {
        color: #fff;
        background: #444;
    }

    .folding-content, .unfolded-content { display: none; }

    .unfolded-content .folding-content { display: block; }

    .menu-item:hover, .close-unfolded-content:hover { cursor: pointer; }

    .single-sub {
        margin: 30px 0;
        text-align: center;

        img {
            width: auto;
            max-width: 90%;
            max-height: 100px;
        }
    }
}
.single-sub-info {
    color: $primary;
    overflow: hidden;
    border-top: 5px solid $primary;
    border-bottom: 5px solid $primary;
    display: none;
    box-shadow: inset 0px 0px 9px rgba(0, 0, 0, 0.5);

    .row {
        max-width: 1200px; width: 100%;
        margin: 0 auto;
    }

    ul {
        padding-left: 0;
        li {
            list-style-type: none;
            margin: 5px 0;
        }
    }
}

.page-contractor {
    .contractor-cta {
        padding: 60px 0;
    }
}
/* ... */

